--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
                     <a class="infoLink" href="mailto:austinyuan2@gmail.com">
                         Email
                     </a>
-                    <a class="infoLink" href="resume/Austin_Yuan_Resume.pdf">
+                    <a class="infoLink" href="Austin_Yuan_Resume.pdf">
                         Resum&#233;
                     </a>
                     <a class="infoLink" href="https://github.com/TheEducatedPickle">
