--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
                     Austin Yuan
                 </div>
                 <div class="bottom">
-                    Computer Science BS | UC Santa Cruz, December '20
+                    Computer Science BS | UC Santa Cruz, December 2020
                 </div>
             </div>
             <div class="contactInfo">
