--- a/index.html
+++ b/index.html
@@ -1,6 +1,14 @@
 <html>
     <head>
         <title>Austin Yuan</title>
+        <meta name="description" content="Software Engineer">
+        <meta name="keywords" content="software engineer">
+        <meta property="og:type" content="website">
+        <meta property="og:title" content="Austin Yuan">
+        <meta property="og:url" content="https://austinyuan.com/">
+        <meta property="og:site_name" content="Austin Yuan">
+        <meta property="og:description" content="Software Engineer">
+        <link rel="manifest" href="/manifest.json">
         <link rel="icon" type="image/ico" href="favicon.ico" sizes="32x32" />
         <link rel="stylesheet" type="text/css" href="style.min.css">
     </head>
