--- a/index.html
+++ b/index.html
@@ -1,44 +1,65 @@
 <html>
-    <head>
-        <title>Austin Yuan</title>
-        <meta name="description" content="Software Engineer">
-        <meta name="keywords" content="software engineer">
-        <meta property="og:type" content="website">
-        <meta property="og:title" content="Austin Yuan">
-        <meta property="og:url" content="https://austinyuan.com/">
-        <meta property="og:site_name" content="Austin Yuan">
-        <meta property="og:description" content="Software Engineer">
-        <link rel="manifest" href="/manifest.json">
-        <link rel="icon" type="image/ico" href="favicon.ico" sizes="32x32" />
-        <link rel="stylesheet" type="text/css" href="style.min.css">
-    </head>
 
-    <body>
-        <div class="main">
-            <div class="mainContent">
-                <div class="top">
-                    Austin Yuan
-                </div>
-                <div class="bottom">
-                    Computer Science BS | UC Santa Cruz, January 2021
-                </div>
+<head>
+    <title>Austin Yuan</title>
+    <meta name="description" content="Software Engineer">
+    <meta name="keywords" content="software engineer">
+    <meta property="og:type" content="website">
+    <meta property="og:title" content="Austin Yuan">
+    <meta property="og:url" content="https://austinyuan.com/">
+    <meta property="og:site_name" content="Austin Yuan">
+    <meta property="og:description" content="Software Engineer">
+    <link rel="manifest" href="/manifest.json">
+    <link rel="icon" type="image/ico" href="favicon.ico" sizes="32x32" />
+    <link rel="stylesheet" type="text/css" href="style.min.css">
+
+    <!-- Google Tag Manager -->
+    <script>
+        (function (w, d, s, l, i) {
+            w[l] = w[l] || []; w[l].push({
+                'gtm.start':
+                    new Date().getTime(), event: 'gtm.js'
+            }); var f = d.getElementsByTagName(s)[0],
+                j = d.createElement(s), dl = l != 'dataLayer' ? '&l=' + l : ''; j.async = true; j.src =
+                    'https://www.googletagmanager.com/gtm.js?id=' + i + dl; f.parentNode.insertBefore(j, f);
+        })(window, document, 'script', 'dataLayer', 'GTM-TWPQPKF');
+    </script>
+    <!-- End Google Tag Manager -->
+</head>
+
+<body>
+    <!-- Google Tag Manager (noscript) -->
+    <noscript>
+        <iframe src="https://www.googletagmanager.com/ns.html?id=GTM-TWPQPKF" height="0" width="0"
+            style="display:none;visibility:hidden"></iframe>
+    </noscript>
+    <!-- End Google Tag Manager (noscript) -->
+    <div class="main">
+        <div class="mainContent">
+            <div class="top">
+                Austin Yuan
             </div>
-            <div class="contactInfo">
-                <div class="infoBox">
-                    <a class="infoLink" href="mailto:austinyuan2@gmail.com">
-                        Email
-                    </a>
-                    <a class="infoLink" href="Austin_Yuan_Resume.pdf">
-                        Resum&#233;
-                    </a>
-                    <a class="infoLink" href="https://github.com/TheEducatedPickle">
-                        GitHub
-                    </a>
-                    <a class="infoLink" href="https://www.linkedin.com/in/austinyuan202/">
-                        LinkedIn
-                    </a>
-                </div>
+            <div class="bottom">
+                Computer Science BS | UC Santa Cruz, January 2021
             </div>
         </div>
-    </body>
+        <div class="contactInfo">
+            <div class="infoBox">
+                <a class="infoLink" href="mailto:austinyuan2@gmail.com">
+                    Email
+                </a>
+                <a class="infoLink" href="Austin_Yuan_Resume.pdf">
+                    Resum&#233;
+                </a>
+                <a class="infoLink" href="https://github.com/TheEducatedPickle">
+                    GitHub
+                </a>
+                <a class="infoLink" href="https://www.linkedin.com/in/austinyuan202/">
+                    LinkedIn
+                </a>
+            </div>
+        </div>
+    </div>
+</body>
+
 </html>
