--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <meta property="og:description" content="Software Engineer">
     <link rel="manifest" href="/manifest.json">
     <link rel="icon" type="image/ico" href="favicon.ico" sizes="32x32" />
-    <link rel="stylesheet" type="text/css" href="style.min.css">
+    <link rel="stylesheet" type="text/css" href="static/css/style.min.css">
 
     <!-- Google Tag Manager -->
     <script>
@@ -34,6 +34,7 @@
             style="display:none;visibility:hidden"></iframe>
     </noscript>
     <!-- End Google Tag Manager (noscript) -->
+
     <div class="main">
         <div class="mainContent">
             <div class="top">
@@ -48,7 +49,7 @@
                 <a class="infoLink" href="mailto:austinyuan2@gmail.com">
                     Email
                 </a>
-                <a class="infoLink" href="Austin_Yuan_Resume.pdf">
+                <a class="infoLink" href="assets/Austin_Yuan_Resume.pdf">
                     Resum&#233;
                 </a>
                 <a class="infoLink" href="https://github.com/TheEducatedPickle">
