--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
                 <a class="infoLink" href="mailto:austinyuan2@gmail.com">
                     Email
                 </a>
-                <a class="infoLink" href="assets/Austin_Yuan_Resume.pdf">
+                <a class="infoLink" href="Austin_Yuan_Resume.pdf">
                     Resum&#233;
                 </a>
                 <a class="infoLink" href="https://github.com/TheEducatedPickle">
