slight style changes

--- a/index.html
+++ b/index.html
@@ -60,6 +60,9 @@
                 </a>
             </div>
         </div>
+        <div class="textSection">
+            
+        </div>
     </div>
 </body>
 
