--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
                 Austin Yuan
             </div>
             <div class="bottom">
-                Computer Science BS | UC Santa Cruz '20
+                Software Engineer Intern at Google
             </div>
         </div>
         <div class="contactInfo">
