--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
                 <a class="infoLink" href="Austin_Yuan_Resume.pdf">
                     Resum&#233;
                 </a>
-                <a class="infoLink" href="https://github.com/TheEducatedPickle">
+                <a class="infoLink" href="https://github.com/ajyuan">
                     GitHub
                 </a>
                 <a class="infoLink" href="https://www.linkedin.com/in/austinyuan202/">
